welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:-6: error: Missing closing brace `}' assumed here
try {
^golomb:2: error: expected class or object definition
def golomb(num:Int): Int = {
^